# tic-tac-toe

./: .clang-format  .gitignore  CMakeLists.txt
include/: globals.h
include/board/: board.h
include/emulator/: ai_agent.h  minimax_agent.h  no_agent.h
include/game/: game.h  title_screen.h
res/forms/: title_screen.ui
src/: main.cpp
src/board/: board.cpp
src/controller/: controller.cpp  controller.h
src/emulator/: minimax_agent.cpp
src/game/: game.cpp  game.h  game.ui  title_screen.cpp  title_screen.h
src/game/ui/: ui_game.h  ui_title_screen.h
